--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,12 +17,12 @@ body {
 </style>
 
 
-<!-- Position --><div style="left: 0px; position: absolute">
+<!-- Position --> <div style="left: 0px; position: absolute">
   
 <div style="padding-left: 25px; padding-right: 25px"><div style="border-radius: 10px; padding: 5px; border: 3px outset #ffffff; background-color: #134f5c; color: #eeeeee">
  <img src="https://i.imgur.com/1UZvuCz.gif"/> <strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2172 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
 
-<!-- site guide & latest posts --> <div style="left: 0px; padding: 25px; padding-bottom: 100px; display: flex">
+<!-- site guide & latest posts --> <div class="home_multi_post_block">
 
 <div style="left: 10px; right: 12.5px">
 <div>
