--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ body {
 
 <div style="left: 10px; right: 12.5px">
 <div>
-<div style="width: 90%; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
+<div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
   <h3><a href="https://ps2wiki.github.io/about.html">➽ About</a></h3>
@@ -48,7 +48,7 @@ body {
   Yearly site-wide Archive
   </br></br><hr></br>
 </div></br>
-<!-- Miscellaneous --> <div style="width: 90%; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #21292f; color: #eeeeee" class="home_miscellaneous">
+<!-- Miscellaneous --> <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #21292f; color: #eeeeee" class="home_miscellaneous">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Miscellaneous</h1>
   <hr></br>
   <h3><a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation%2Cpost-idea&projects=&template=post-ideas.yml&title=%5BPost+Idea%5D%3A+">➽ Contributing</a></h3>
