--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,7 +57,8 @@ body {
   
 
 </div></div></div></br>
-
+  
+<div style="padding-right: 12.5px">
 <div style="padding: 6.25px"></div>
 
 <div style="width: 90%; left: 12.5px; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
@@ -69,7 +70,7 @@ body {
   {% endif %}
     {{ content }}
   {% include views/pagination.html %}
-</div></div>
+</div></div></div>
 
 </div>
 
