--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,7 +60,6 @@ body {
   
 <div style="padding: 6.25px"></div>
   
-<div style="padding-right: 3.125px">
 <div style="width: 90%; left: 12.5px; right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; color: #eeeeee" class="home_latest_posts">
    <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
   <hr></br>
@@ -70,7 +69,7 @@ body {
   {% endif %}
     {{ content }}
   {% include views/pagination.html %}
-</div></div></div>
+</div></div>
 
 </div>
 
