--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,13 +19,13 @@ body {
 
 <!-- Position --> <div style="left: 0px; position: absolute">
   
-<div style="padding-left: 25px; padding-right: 25px"><div style="border-radius: 10px; padding: 5px; border: 3px outset #ffffff; background-color: #134f5c; color: #eeeeee">
+<!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div style="border-radius: 10px; padding: 5px; border: 3px outset #ffffff; background-color: #134f5c; color: #eeeeee">
  <img src="https://i.imgur.com/1UZvuCz.gif"/> <strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2172 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
 
-<!-- site guide & latest posts --> <div class="home_multi_post_block">
+<!-- Site Guide & Latest Posts --> <div class="home_multi_post_block">
 
 <div style="left: 10px; right: 12.5px">
-<div>
+<div class="home_siteguide_and_misc_parent">
 <div style="right: 12.5px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #122021; color: #eeeeee" class="home_site_guide">
   <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
   <hr></br>
