--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -325,6 +325,9 @@ table {
 }
 
 @media (max-width: 400px) {
+  .home_news_block {
+    width: 100%;
+  }
   .home_multi_post_block {
   left: 0px;
   width: 90%;
