--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -323,10 +323,21 @@ table {
   padding-bottom: 100px; 
   display: flex
 }
-
+.home_news_block {
+    border-radius: 10px; 
+    padding: 5px; 
+    border: 3px outset #ffffff; 
+    background-color: #134f5c; 
+    color: #eeeeee
+  }
 @media (max-width: 400px) {
   .home_news_block {
     width: 100%;
+    border-radius: 10px; 
+    padding: 5px; 
+    border: 3px outset #ffffff; 
+    background-color: #134f5c; 
+    color: #eeeeee
   }
   .home_multi_post_block {
   left: 0px;
