--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ body {
 <!-- Position --> <div style="left: 0px; position: absolute">
   
 <!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
- <img style="pointer-events: none; user-select: none" src="https://i.imgur.com/1UZvuCz.gif"/> <strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2172 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
+ <img unselectable="on" src="https://i.imgur.com/1UZvuCz.gif"/> <strong style="font-size: 1.10em">Open PS2 Loader v1.2.0-Beta-2172 has been released on <a href="https://github.com/ps2homebrew/Open-PS2-Loader/releases/tag/latest">GitHub<sup><i class="fa fa-paperclip"></i></sup></a> !</strong></div></div>
 
 <!-- Site Guide & Latest Posts --> <div class="home_multi_post_block">
 
