--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,8 +54,8 @@ body {
   <h3><a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation%2Cpost-idea&projects=&template=post-ideas.yml&title=%5BPost+Idea%5D%3A+">➽ Contributing</a></h3>
   Have new ideas or want to help improve existing stuff? Learn about how you can contribute!
   </br></br><hr></br>
-  <h3><a href="https://ps2wiki.github.io">➽ SAS App Archive <sup><img src="https://i.imgur.com/CRNBY5O.gif"/></sup></a></h3>
-  The one place to download all* PS2 Apps!
+  <h3><a href="https://ps2wiki.github.io">➽ SAS App Archive <sup><img width="7" height="1.2" src="https://i.imgur.com/CRNBY5O.gif"/></sup></a></h3>
+  The one place to download all* PS2 Apps! </br>
   <sub>*Only MC installable apps available</sub>
 </div></div></div></br>
   
