--- a/_includes/extensions/theme-toggle.html
+++ b/_includes/extensions/theme-toggle.html
@@ -3,8 +3,8 @@
   <label for="theme-switch">
     <div class="toggle"></div>
     <div class="names">
-      <p class="light"><i class="fa fa-sun"></i></p>
-      <p class="dark"><i class="fa fa-moon"></i></p>
+      <p class="light"><i class="fad fa-sun"></i></p>
+      <p class="dark"><i class="fad fa-moon"></i></p>
     </div>
   </label>
 </div>
