--- a/_sass/misc/theme-toggle.scss
+++ b/_sass/misc/theme-toggle.scss
@@ -2,8 +2,8 @@
   position: relative;
   width: $base-font-size * 7.65;
   margin-top: 10px;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 60px;
+  margin-left: auto;
   transition: .3s cubic-bezier(.4,.03,0,1);
 
   label, .toggle {
@@ -28,7 +28,7 @@
   .names {
     font-size: 1em;
     font-weight: bolder;
-    width: 76%;
+    width: 20px;
     margin-left: 12%;
     position: relative;
     display: flex;
