--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,20 @@ subheading: 'Your awesome subheading'
 banner: 'default'
 ---
 
+<!-- Terms of Service Notice -->
+<div id="termsofservice" class="tos">
+  <span class="clbtn" onclick="this.parentElement.style.display='none';"></span>
+  <strong>Important:</strong> Please read the <a href="https://ps2wiki.github.io/about.html#Terms-of-Service">Terms of Service</a> in <a href="https://ps2wiki.github.io/about.html">About</a> before using the site. Thankyou.
+</div>
+<script>
+  setTimeout(()=>{
+    const tos=document.getElementById('termsofservice');
+    tos.style.display='none' ;
+  },5000);
+</script>
+
+
+<!-- Page begins -->
 <h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
 <h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
 </br></br></br></br></br>
