--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ setTimeout(()=>{
 
 <!-- Tips -->
 <div style="right: 12.5px; border-radius: 10px; padding: 5px; padding-right: 10px; border: 3px outset #ffffff; background-color: #4e58a2; color: #eeeeee" class="home_daily_tips">
-<a style="font-size: 10px" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a><img src="https://i.imgur.com/jaqbxYW.gif"/><strong style="font-size: 1.0em">{{ page.tips }}</strong>
+<div style="border-radius: 5px; padding: 2.5px; border: 2px outset red"><a style="font-size: 10px" href="https://ps2wiki.github.io/archive/tips.html" class="clbtn">Previous Tips<sup>[↗]</sup></a></div><img src="https://i.imgur.com/jaqbxYW.gif"/><!--krx--><strong style="font-size: 1.0em">{{ page.tips }}</strong>
 </div></br>
   
 <!-- Site Guide -->
