--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@ setTimeout(()=>{
 </br></br></br></br></br>
   
 <!-- News --> <div class="home_news_block">
-<a style="font-size: 10px" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a>
+<div style="border-radius: 5px; padding: 2.5px; border: 2px outset blue"><a style="font-size: 10px" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a></div>
 <img src="https://i.imgur.com/1UZvuCz.gif"/><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div>
 
 <!-- Tips, Site Guide & Latest Posts --> <div class="home_multi_post_block">
